italy copy updated

--- a/DE/women.html
+++ b/DE/women.html
@@ -254,6 +254,26 @@
               <p>Loungewear</p>
             </a>
           </div>
+          <div class="block">
+            <a
+              href="#ptt"
+              data-category="airism"
+              data-action="click"
+              data-label="collection: w Princesse tam tam"
+            >
+              <div class="block-asset">
+                <img
+                  width="200px"
+                  height="200px"
+                  loading="lazy"
+                  class="lazy"
+                  style="padding: 0px 23.5px; background-color: white"
+                  data-src="https://image.uniqlo.com/UQ/ST3/eu/imagesother/2023/content-pages/airism/women/ptt-lineup.jpg"
+                />
+              </div>
+              <p>Princesse tam tam</p>
+            </a>
+          </div>
         </div>
       </div>
 
@@ -951,6 +971,42 @@
         <div class="related-products">
           <h3>Verwandte Produkte</h3>
           $include('Page-RenderGrid', 'pids','462019|457659','count', 4)$
+        </div>
+      </div>
+
+      <!-- PRINCESS TAM TAM -->
+      <div class="product-container" id="ptt">
+        <h2>Princesse tam tam</h2>
+
+        <div data-sku="463595">
+          <div class="product-hero">
+            <p class="ptt-p">
+              Princesse tam tam ist eine französische Marke für Frauen von
+              Frauen. Entdecke neue Designs, die den eleganten Alltagsstyle von
+              Princesse tam tam mit den praktischen Funktionen von AIRism
+              vereinen und perfekten Komfort bieten.
+            </p>
+            <a
+              href=""
+              data-product-url=""
+              data-category="airism"
+              data-action="click"
+              data-label="Princesse tam tam: w Princesse tam tam 1"
+            >
+              <img
+                data-src="https://image.uniqlo.com/UQ/ST3/eu/imagesother/2023/content-pages/airism/women/ptt-hero.jpg"
+                width="650px"
+                height="650px"
+                loading="lazy"
+                class="lazy"
+              />
+            </a>
+          </div>
+        </div>
+        <div class="related-products">
+          <h3>Die Kollektion</h3>
+          $include('Page-RenderGrid',
+          'pids','463595|463598|467167|463596','count', 4)$
         </div>
       </div>
 
